k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-web-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: react-web
  type: ClusterIP
